# kernel-dev

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENCE  Makefile  README.MD  README.md
debug/: 2024-04.txt
docs/: contribution.md
include/: types.h  utils.h
include/kernel/: interrupt.h  kernel.h  memm.h  syscall.h  tty.h
include/kernel/arch/x86_64/: interrupt.h  interrupt_procs.h  kernel.h  memm.h  proc.h  syscall.h
include/kernel/clock/: time.h
include/kernel/interrupt/: procs.h
include/kernel/memm/allocator/: raw.h
include/libk/: bits.h  lst.h  math.h  multiboot2.h
qemu/: Makefile
qemu/bios/: OVMF_CODE.csm.4m.fd  OVMF_CODE.csm.fd
qemu/bios/x86_64/: OVMF.fd  OVMF_CODE.4m.fd  OVMF_CODE.secboot.4m.fd
scripts/: depcheck  magicgen  tfgen
src/: Makefile  lib.rs  metaverse.lds
src/include/asm/: sysctl.h
src/include/kernel/: kernel.h  klog.h  memm.h  mm.h  tty.h
src/include/libk/: string.h
src/include/libk/multiboot2/: bootinfo.h
src/kernel/: Makefile  klog.rs  main.c  main.rs  mod.rs
src/kernel/clock/: time.c  time.rs
src/kernel/memm/: memm.c  memm.rs  mod.rs
src/kernel/sync/: mod.rs  rwlock.rs
src/kernel/tty/: font.c  mod.rs  tty.c  tty.rs
src/libk/: Makefile  lst.c  mod.rs  utils.c
src/libk/alloc/: alloc.rs  boxed.rs  mod.rs  string.rs  vec.rs
src/libk/core/: mod.rs
src/libk/multiboot2/: bootinfo.c
src/scripts/: colorize  depcheck
src/ttyfonts/: metamono.tfn
test/: Makefile
test/bios/x86_64/: MICROVM.fd  OVMF_CODE.4m.fd  OVMF_CODE.csm.4m.fd  OVMF_CODE.csm.fd  OVMF_CODE.secboot.4m.fd  OVMF_CODE.secboot.fd
(+23 files in other folders)
